gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-concat_bytes_dg.rs
fn main() {
    let a = concat_bytes!(b'A', b"BC"); // { dg-error ".E0658." "" { target *-*-* } }
    assert_eq!(a, &[65, 66, 67]);
}

